# corewar

./: .check.sh.swp  .gitignore  CMakeLists.txt  Makefile  README.md  author  batman.cor  bee_gees.cor  check.sh  corewar  diff  main.c  norm_vm_src  res1  res2  test.cor  testfile1.cor  vala
asm/: Makefile  char_to_string.c  do_exit.c  main.c  recording.c  t_token_func.c
asm_src/: Makefile  asm.h  batman.s  get_next_line.c  is_equal_token_type.c  lexical_analyz.c  main.c  next_token.c  op.h  parse_op_name_comment.c  print_expected_exit.c  print_point.c  print_token_type.c  reading.c  reading_1.c  reading_2.c  reading_3.c  reading_4.c  reading_5.c  recording.c  recording_1.c  recording_2.c  set_def_gen.c  switch_parse_1.c  switch_parse_2.c  t_token_func.c  write_byte_to_file.c  write_int_to_file.c  write_nam_com_to_file.c  write_short_to_file.c
asm_src/includes/: get_next_line.h
asm_src/libft/: Makefile  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdelone.c  ft_lstmap.c  ft_memalloc.c  ft_memcmp.c  ft_memdel.c  ft_memset.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strdup.c  ft_striter.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strncat.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  ft_tolower.c
asm_src_old/: 2test.col  2test.s  batman.con  test.col  test.s
asm_src_old/libft/: ft_bzero.c  ft_isascii.c  ft_lstdel.c  ft_lstiter.c  ft_lstnew.c  ft_memccpy.c  ft_memchr.c  ft_memcpy.c  ft_memmove.c  ft_noarstrcpy.c  ft_putchar.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putstr_fd.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strequ.c  ft_striteri.c  ft_strmapi.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_toupper.c
asm_src_old/test/: test_main.c
champion_timorin/: bford_is_best.s
champs/: Death.s  bee_gees.s  kamelkaze.cor
ft_printf/: CMakeLists.txt  Makefile  ft_printf.c  ft_printf.h
includes/: asm.h  asm_structs.h  defines.h  vm.h  vm_structs.h
libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_atol.c  ft_isint.c  ft_nbr_len.c  ft_strcmp.c  libft.h
src/asm_src/: Makefile  char_to_string.c  do_exit.c  is_equal_token_type.c  lexical_analyz.c  main.c  next_token.c  parse_op_name_comment.c  print_expected_exit.c  print_point.c  print_token_type.c  reading.c  reading_1.c  reading_2.c  reading_3.c  reading_4.c  reading_5.c  recording.c  recording_1.c  recording_2.c  set_def_gen.c  switch_parse_1.c  switch_parse_2.c  t_token_func.c  write_byte_to_file.c  write_int_to_file.c  write_nam_com_to_file.c  (+1 more)
src/vm_src/: vm.c  (+52 more)
subject/: vm
vm/: Makefile  cw_vm_get_args.c  ft_add.c  ft_and.c  ft_arena.c  ft_dir_or_ind.c  ft_do_cycle.c  ft_error.c  ft_fork.c  ft_init_args.c  ft_init_input.c  ft_init_player.c  ft_init_t_dir.c  ft_init_t_ind.c  ft_ld.c  ft_lfork.c  ft_live.c  ft_lld.c  ft_lstdel_player.c  ft_lstlen_player.c  ft_lstnew_player.c  ft_make_array_careta.c  ft_make_array_cursor.c  ft_map.c  ft_move.c  ft_print_careta.c  ft_print_cursor.c  ft_print_hex.c  ft_print_map.c  ft_print_map_single.c  ft_print_players.c  ft_rewrite_map.c  ft_st.c  ft_sub.c  ft_valid_input.c  ft_zjmp.c  op_add_sub.c  op_all_fork.c  op_bitwise.c  op_load.c  (+55 more)
vm_champs/: bee_gees.s  kamelkaze.s  test.s
vm_src/: Makefile  op_add_sub.c  op_all_fork.c  op_bitwise.c  op_load.c  op_load_i.c  vm.c  vm.h  vm_arena.c  vm_check_cursor.c  vm_dir_or_ind.c  vm_do_cycle.c  vm_error.c  vm_get_args.c  vm_get_flags.c  vm_init_cycle.c  vm_init_player.c  vm_init_player.h  vm_init_t_dir.c  vm_init_t_ind.c  vm_make_player_params.c  vm_make_start_list_cursor.c  vm_op_aff.c  vm_op_and.c  vm_op_live.c  vm_op_or.c  vm_op_st.c  vm_op_sti.c  vm_op_xor.c  vm_op_zjmp.c  vm_player_lst.c  vm_print_log.c  vm_print_map.c  vm_print_map.h  vm_print_map_colors.c  vm_print_map_dynamic.c  vm_print_map_static.c  vm_rewrite_map.c  vm_structs.h  vm_unfold_indirects.c  (+2 more)
(+6 files in other folders)
